// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`forSelf > should skip existing mapping properties from another mapping 1`] = `
[
  [
    [
      "foo",
    ],
    [
      [
        "foo",
      ],
      [
        [
          6,
          [Function],
        ],
      ],
    ],
    [
      [Function],
      [Function],
    ],
  ],
  [
    [
      "bar",
    ],
    [
      [
        "bar",
      ],
      [
        [
          6,
          [Function],
        ],
      ],
    ],
    [
      [Function],
      [Function],
    ],
  ],
]
`;

exports[`forSelf > should update mapping properties with another mapping 1`] = `
[
  [
    [
      "foo",
    ],
    [
      [
        "foo",
      ],
      [
        [
          6,
          [Function],
        ],
      ],
    ],
    [
      [Function],
      [Function],
    ],
  ],
]
`;

exports[`forSelf should skip existing mapping properties from another mapping 1`] = `
Array [
  Array [
    Array [
      "foo",
    ],
    Array [
      Array [
        "foo",
      ],
      Array [
        Array [
          6,
          [Function],
        ],
      ],
    ],
    Array [
      [Function],
      [Function],
    ],
  ],
  Array [
    Array [
      "bar",
    ],
    Array [
      Array [
        "bar",
      ],
      Array [
        Array [
          6,
          [Function],
        ],
      ],
    ],
    Array [
      [Function],
      [Function],
    ],
  ],
]
`;

exports[`forSelf should update mapping properties with another mapping 1`] = `
Array [
  Array [
    Array [
      "foo",
    ],
    Array [
      Array [
        "foo",
      ],
      Array [
        Array [
          6,
          [Function],
        ],
      ],
    ],
    Array [
      [Function],
      [Function],
    ],
  ],
]
`;
